llvm/test/tools/llubi/lib_malloc_large_size.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose --max-mem=100 < %s 2>&1 | FileCheck %s

declare ptr @malloc(i64)

define void @main() {
entry:
  %ptr = call ptr @malloc(i64 100)
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Error: Insufficient stack space.
; CHECK-NEXT: error: Execution of function 'main' failed.
